[2단계 - 로그인 구현하기] 루덴스 미션 제출합니다. (#1211)
* test: 파일 학습 테스트 구현

* test: 입출력 스트림 학습 테스트 구현

* fix: JUnit 실행기 버전 정렬

* feat: HTML 파일 응답 구현

* feat: CSS 응답 구현

* feat: 쿼리 파싱과 회원 조회 구현

* refactor: 경로, 파라미터 명, 콘텐츠 타입 상수 분리

* feat: 로그인 결과 리다이렉트 및 POST 회원가입 구현

* fix: 요청 경로 확장자 기반 Content-type 결정

* fix: urlPath 기준으로 응답하도록 수정

* feat: POST 로그인 처리 및 폼 데이터 디코딩

* feat: JSESSIONID 쿠키 발급 및 응답 헤더 구성

* feat: 세션 기반 로그인 상태 유지 및 로그인 페이지 리다이렉트

* test: 로그인과 세션 유지 시나리오 검증

* fix: 중복 회원가입 거절과 쿠키 발급 의도 명확화